added /favorite route in querying database

--- a/python-minicamp-homework-3/templates/home.html
+++ b/python-minicamp-homework-3/templates/home.html
@@ -2,6 +2,7 @@
 <h1>Food Database</h1>
 <h3><a href="/enternew">Add Food</a></h3>
 <br>
+<h3><a href='/favorite'>Favorite foods</a></h3>
 <br>
 <br>
 <h3>Apply now for a chance to attend one of our immersive programs beginning in April 2017.</h3>
